# merlin2-hospital-patrolling-rgonzf04

./: CMakeLists.txt  README.md  package.xml
launch/: hospital_patrolling.launch.py
merlin2_hospital_patrolling/: merlin2_room_patrol_fsm_action.py  merlin2_room_patrol_mission_node.py  pddl.py
params/: stretcher_room_waypoints.yaml
